--- a/web_client/package.json
+++ b/web_client/package.json
@@ -20,9 +20,13 @@
     "@types/react": "^15.0.38",
     "@types/react-dom": "^15.5.1",
     "awesome-typescript-loader": "^3.2.1",
+    "css-loader": "^0.28.4",
+    "node-sass": "^4.5.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "sass-loader": "^6.0.6",
     "source-map-loader": "^0.2.1",
+    "style-loader": "^0.18.2",
     "typescript": "^2.4.2"
   }
 }
