--- a/server/package.json
+++ b/server/package.json
@@ -20,9 +20,17 @@
   },
   "homepage": "https://github.com/spoke-software/literate-hexa-computing-machine#readme",
   "devDependencies": {
+    "@types/mongodb": "^2.2.10",
+    "@types/mongoose": "^4.7.21",
+    "@types/request-promise": "^4.1.36",
     "@types/ws": "^3.0.2",
     "tsc-watch": "^1.0.7",
-    "typescript": "^2.4.2",
-    "ws": "^3.0.0"
+    "typescript": "^2.4.2"
+  },
+  "dependencies": {
+    "mongoose": "^4.11.8",
+    "request": "^2.81.0",
+    "request-promise": "^4.2.1",
+    "ws": "^3.1.0"
   }
 }
