--- a/server/package.json
+++ b/server/package.json
@@ -4,10 +4,10 @@
   "description": "Server back end for rolling a die, getting letters, and placing letters.",
   "main": "./src/server.ts",
   "scripts": {
-    "start": "tsc && node ./dist/server.js",
+    "start": "tsc && node ./dist/src/server.js",
     "dev": "npm run openTestClient && tsc-watch --outDir ./dist --onSuccess \"npm run start\"",
     "openTestClient": "node ./src/dev_tools/openTestClient.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tsc && mocha \"dist/tst/**/*.js\""
   },
   "repository": {
     "type": "git",
@@ -21,10 +21,17 @@
   "homepage": "https://github.com/spoke-software/literate-hexa-computing-machine#readme",
   "devDependencies": {
     "@types/bluebird": "^3.5.11",
+    "@types/chai": "^4.0.4",
+    "@types/chai-as-promised": "^7.1.0",
+    "@types/mocha": "^2.2.43",
     "@types/mongodb": "^2.2.11",
     "@types/mongoose": "^4.7.21",
     "@types/mongoose-auto-increment": "^5.0.30",
     "@types/ws": "^3.0.2",
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
+    "mocha": "^3.5.3",
+    "mocha-typescript": "^1.1.9",
     "tsc-watch": "^1.0.7",
     "typescript": "^2.4.2"
   },
