Web client: Switch from React to Vue and from Sassy CSS to Sass, other tweaks.

--- a/web_client/package.json
+++ b/web_client/package.json
@@ -4,6 +4,8 @@
   "description": "Web client front end for rolling a die, getting letters, and placing letters.",
   "main": "index.js",
   "scripts": {
+    "build": "webpack",
+    "dev": "webpack -w",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,16 +19,18 @@
   },
   "homepage": "https://github.com/spoke-software/literate-hexa-computing-machine#readme",
   "devDependencies": {
-    "@types/react": "^15.0.38",
-    "@types/react-dom": "^15.5.1",
-    "awesome-typescript-loader": "^3.2.1",
-    "css-loader": "^0.28.4",
+    "css-loader": "^0.28.8",
     "node-sass": "^4.5.3",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
     "sass-loader": "^6.0.6",
     "source-map-loader": "^0.2.1",
     "style-loader": "^0.18.2",
-    "typescript": "^2.4.2"
+    "ts-loader": "^3.2.0",
+    "typescript": "^2.4.2",
+    "vue-loader": "^13.7.0",
+    "vue-template-compiler": "^2.5.13",
+    "webpack": "^3.10.0"
+  },
+  "dependencies": {
+    "vue": "^2.5.13"
   }
 }
