Web client: Add Vuex for state management, begin implementing app.

--- a/web_client/package.json
+++ b/web_client/package.json
@@ -2,7 +2,7 @@
   "name": "literate-hexa-computing-machine-web-client",
   "version": "0.0.1",
   "description": "Web client front end for rolling a die, getting letters, and placing letters.",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
     "build": "webpack",
     "dev": "webpack -w",
@@ -31,6 +31,7 @@
     "webpack": "^3.10.0"
   },
   "dependencies": {
-    "vue": "^2.5.13"
+    "vue": "^2.5.13",
+    "vuex": "^3.0.1"
   }
 }
